[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "odin"
version = 3.0.0

dependencies = [

]

authors = [
  {name = "Chris "cmaddy" Maddalena"},
  {name = "JVormstein"},
]
maintainers = [
  {name = "JVormstein"}
]
description = "Observation, Detection, and Investigation of Networks
             ODIN was designed to assist with OSINT automation for penetration testing clients and
             their networks, both the types with IP address and social. Provide a client's name and
             some domains to gather information from sources like RDAP, DNS, Shodan, and
             so much more.

             ODIN is made possible through the help, input, and work provided by others. Therefore,
             this project is entirely open source and available to all to use/modify."
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">= 3.8"

[project.scripts]
spam-cli = "odin:main_cli"